--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.solareye.subotemplate
-pluginName = subo_template
+pluginName = SuboTemplate
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
 
@@ -17,7 +17,7 @@ platformVersion = 2021.1.3
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
+platformPlugins = java, com.intellij.java, org.jetbrains.android, android, org.jetbrains.kotlin
 
 # Java language level used to compile sources and to generate the files for - Java 11 is required since 2020.3
 javaVersion = 11
@@ -29,3 +29,6 @@ gradleVersion = 7.4
 # See https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library for details.
 # suppress inspection "UnusedProperty"
 kotlin.stdlib.default.dependency = false
+
+# Configuration for macOS
+androidStudioRunPath=/Applications/Android Studio.app/Contents
