--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,18 +1,27 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.solareye.subotemplate</id>
-    <name>subo_template</name>
+    <name>SuboTemplate</name>
     <vendor>solareye</vendor>
 
+    <depends>org.jetbrains.android</depends>
+    <depends>org.jetbrains.kotlin</depends>
+    <depends>com.intellij.modules.java</depends>
     <depends>com.intellij.modules.platform</depends>
+    <depends>com.intellij.modules.androidstudio</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <applicationService serviceImplementation="com.github.solareye.subotemplate.services.MyApplicationService"/>
         <projectService serviceImplementation="com.github.solareye.subotemplate.services.MyProjectService"/>
     </extensions>
 
+    <extensions defaultExtensionNs="com.android.tools.idea.wizard.template">
+        <wizardTemplateProvider implementation="com.github.solareye.subotemplate.WizardTemplateProviderImpl" />
+    </extensions>
+
     <applicationListeners>
         <listener class="com.github.solareye.subotemplate.listeners.MyProjectManagerListener"
                   topic="com.intellij.openapi.project.ProjectManagerListener"/>
     </applicationListeners>
+
 </idea-plugin>
